Cambios en el dashboard

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -31,20 +31,16 @@
                     <h3>Dashboard</h3>
                 </a>
                 <a href="#">
-                    <span class="material-symbols-sharp">person_outline</span>
-                    <h3>Team</h3>
-                </a>
-                <a href="#">
-                    <span class="material-symbols-sharp">insights</span>
-                    <h3>Analytics</h3>
-                </a>
-                <a href="#">
-                    <span class="material-symbols-sharp">bar_chart</span>
-                    <h3>Graficos</h3>
+                    <span class="material-symbols-sharp">info</span>
+                    <h3>Acerca de</h3>
                 </a>
                 <a href="#">
                     <span class="material-symbols-sharp">database</span>
                     <h3>Data Base</h3>
+                </a>
+                <a href="#">
+                    <span class="material-symbols-sharp">insights</span>
+                    <h3>Analytics</h3>
                 </a>
                 <a href="#">
                     <span class="material-symbols-sharp">description</span>
