--- a/Programa/dashboard/dashboard.html
+++ b/Programa/dashboard/dashboard.html
@@ -1,77 +1,178 @@
+</html>
 <!DOCTYPE html>
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trending YouTube</title>
-
-    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,0,0" />
-
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.4.1/css/buttons.dataTables.min.css">
-
+    <link rel="stylesheet" href="style.css">
 </head>
-<script src="https://cdn.datatables.net/responsive/2.5.0/js/dataTables.responsive.min.js"></script>
 
 <body>
-    <div class="container">
-        <!-- Aisde section start -->
-        <aside>
-            <div class="top">
-                <div class="logo">
-                    <h2>T<span class="danger">Youtube</span></h2>
+
+    <aside>
+        <div class="logo">
+            <h2>T<span class="accent">You</span></h2>
+        </div>
+        <nav>
+            <div class="sidebar-item active" data-section="dashboard">
+                <span class="material-symbols-sharp">grid_view</span>
+                <h3>Dashboard</h3>
+            </div>
+            <div class="sidebar-item" data-section="about">
+                <span class="material-symbols-sharp">info</span>
+                <h3>Acerca de</h3>
+            </div>
+            <div class="sidebar-item" data-section="database">
+                <span class="material-symbols-sharp">database</span>
+                <h3>Data Base</h3>
+            </div>
+            <div class="sidebar-item" data-section="analytics">
+                <span class="material-symbols-sharp">insights</span>
+                <h3>Analytics</h3>
+            </div>
+            <div class="sidebar-item" data-section="reports">
+                <span class="material-symbols-sharp">description</span>
+                <h3>Reportes</h3>
+            </div>
+            <div class="sidebar-item" data-section="logout">
+                <span class="material-symbols-sharp">logout</span>
+                <h3>Log Out</h3>
+            </div>
+        </nav>
+    </aside>
+
+    <main>
+        <!-- Dashboard -->
+        <div id="dashboard" class="section active">
+            <h2>Bienvenido al Dashboard</h2>
+            <p>Contenido principal de la sección Dashboard.</p>
+
+            <div class="highlights">
+                <div class="highlight-card yellow">
+                    <div class="hc-content">
+                        <span id="stat-rows" class="hc-value">--</span>
+                        <span class="hc-label">Total registros</span>
+                    </div>
+                    <span class="material-symbols-sharp hc-icon">storage</span>
                 </div>
-                <div class="close">
-                    <span class="material-symbols-sharp">close</span>
+
+                <div class="highlight-card blue" id="reactions-card">
+                    <div class="hc-content">
+                        <span id="stat-likes" class="hc-value">--</span>
+                        <span class="hc-label">Likes</span>
+                    </div>
+                    <span id="reactions-icon" class="material-symbols-sharp hc-icon">thumb_up</span>
+                </div>
+
+                <div class="highlight-card green">
+                    <div class="hc-content">
+                        <span id="stat-views" class="hc-value">--</span>
+                        <span class="hc-label">Vistas</span>
+                    </div>
+                    <span class="material-symbols-sharp hc-icon">visibility</span>
+                </div>
+
+                <div class="highlight-card pink">
+                    <div class="hc-content">
+                        <span id="stat-comments" class="hc-value">--</span>
+                        <span class="hc-label">Comentarios</span>
+                    </div>
+                    <span class="material-symbols-sharp hc-icon">chat_bubble</span>
                 </div>
             </div>
-            <div class="sidebar">
-                <a href="#" >
-                    <span class="material-symbols-sharp">grid_view</span>
-                    <h3>Dashboard</h3>
-                </a>
-                <a href="#">
-                    <span class="material-symbols-sharp">info</span>
-                    <h3>Acerca de</h3>
-                </a>
-                <a href="#" onclick="mostrarOpcionesBaseDatos()">
-                    <span class="material-symbols-sharp">database</span>
-                    <h3>Data Base</h3>
-                </a>
-                <a href="#">
-                    <span class="material-symbols-sharp">insights</span>
-                    <h3>Analytics</h3>
-                </a>
-                <a href="#">
-                    <span class="material-symbols-sharp">description</span>
-                    <h3>Reportes</h3>
-                </a>
-                <a href="#">
-                    <span class="material-symbols-sharp">logout</span>
-                    <h3>Log Out</h3>
-                </a>
+
+            <!-- Acerca de -->
+            <div id="about" class="section">
+                <h2>Acerca de</h2>
+                <p>Información sobre la aplicación.</p>
             </div>
-        </aside>
-        <!-- Aisde section end -->
 
-        <main id="contenido">
-            <h2>Bienvenido al dashboard</h2>
-            <p>Selecciona una opción del menú para ver los datos.</p>
-        </main>
-    </div>
+            <!-- Data Base -->
+            <div id="database" class="section">
+                <h2>Data Base</h2>
+                <p>Aquí iría tu visor de CSV/JSON.</p>
+            </div>
 
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
-    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/2.4.1/js/dataTables.buttons.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/2.4.1/js/buttons.html5.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/2.4.1/js/buttons.print.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+            <!-- Analytics -->
+            <div id="analytics" class="section">
+                <h2>Analytics</h2>
+                <p>Gráficos y análisis de datos.</p>
+            </div>
 
-    <script src="script.js"></script>
+            <!-- Reportes -->
+            <div id="reports" class="section">
+                <h2>Reportes</h2>
+                <p>Descarga de reportes PDF/PPT.</p>
+            </div>
+
+            <!-- Log Out -->
+            <div id="logout" class="section">
+                <h2>Log Out</h2>
+                <p>¿Seguro que deseas cerrar sesión?</p>
+            </div>
+    </main>
+
+    <script>
+        (function () {
+            const sidebarItems = document.querySelectorAll('.sidebar-item');
+            const pageSections = document.querySelectorAll('.section');
+
+            sidebarItems.forEach(item => {
+                item.addEventListener('click', () => {
+                    sidebarItems.forEach(i => i.classList.remove('active'));
+                    pageSections.forEach(s => s.classList.remove('active'));
+
+                    item.classList.add('active');
+
+                    const targetId = item.getAttribute('data-section');
+                    const targetSection = document.getElementById(targetId);
+                    if (targetSection) targetSection.classList.add('active');
+                });
+            });
+        })();
+
+        (async function () {
+            try {
+                const resp = await fetch('Programa/data_limpios/stats.json');
+                if (!resp.ok) throw new Error(`HTTP ${resp.status}`);
+                const stats = await resp.json();
+
+                document.getElementById('stat-rows').textContent =
+                    stats.total_rows.toLocaleString();
+
+                const likesEl = document.getElementById('stat-likes');
+                const iconEl = document.getElementById('reactions-icon');
+                let showingLike = true;
+                likesEl.textContent = stats.total_likes.toLocaleString();
+
+                setInterval(() => {
+                    if (showingLike) {
+                        iconEl.textContent = 'thumb_down';
+                        likesEl.textContent = stats.total_dislikes.toLocaleString();
+                    } else {
+                        iconEl.textContent = 'thumb_up';
+                        likesEl.textContent = stats.total_likes.toLocaleString();
+                    }
+                    showingLike = !showingLike;
+                }, 5000);
+
+                document.getElementById('stat-views').textContent =
+                    stats.total_views.toLocaleString();
+
+                document.getElementById('stat-comments').textContent =
+                    stats.total_comments.toLocaleString();
+
+            } catch (err) {
+                console.error('No se pudieron cargar las estadísticas:', err);
+            }
+        })();
+    </script>
+
 
 </body>
 
