--- a/Programa/dashboard/dashboard.html
+++ b/Programa/dashboard/dashboard.html
@@ -10,19 +10,6 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="style.css">
-    <!-- Three.js -->
-    <script src="https://unpkg.com/three@0.130.1/build/three.min.js"></script>
-    <!-- three-globe -->
-    <script src="https://unpkg.com/three-globe@2.24.11/build/three-globe.min.js"></script>
-    <!-- d3 para scale si fuera necesario -->
-    <script src="https://unpkg.com/d3@5"></script>
-
-    <!-- three.js core -->
-    <script src="https://unpkg.com/three@0.125.2/build/three.min.js"></script>
-    <!-- three-globe UMD -->
-    <script src="https://unpkg.com/three-globe"></script>
-    <!-- TrackballControls UMD -->
-    <script src="https://unpkg.com/three@0.125.2/examples/js/controls/TrackballControls.js"></script>
 
 </head>
 
@@ -101,10 +88,6 @@
 
             </div>
 
-            <!-- debajo de .highlights -->
-            <div id="globe-container"></div>
-
-
             <!-- Acerca de -->
             <div id="about" class="section">
                 <h2>Acerca de</h2>
@@ -135,6 +118,10 @@
                 <p>¿Seguro que deseas cerrar sesión?</p>
             </div>
     </main>
+    <!-- LIBRERÍAS Three.js al final del body -->
+    <script src="https://cdn.jsdelivr.net/npm/three@0.139.2/build/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.139.2/examples/js/controls/OrbitControls.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three-globe@2.27.1/dist/three-globe.min.js"></script>
 
     <script>
         (function () {
@@ -191,65 +178,65 @@
             }
         })();
 
-        window.addEventListener('load', () => {
-            const container = document.getElementById('globe-container');
-
-            // 1. Renderer transparente
-            const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
-            renderer.setSize(container.offsetWidth, container.offsetHeight);
-            renderer.domElement.style.background = 'transparent';
-            container.appendChild(renderer.domElement);
-
-            // 2. Escena sin fondo
+        window.addEventListener('DOMContentLoaded', () => {
             const scene = new THREE.Scene();
-            scene.background = null;
+            const camera = new THREE.PerspectiveCamera();
+            camera.aspect = window.innerWidth / 500;
+            camera.updateProjectionMatrix();
+            camera.position.z = 250;
 
-            // 3. Cámara
-            const camera = new THREE.PerspectiveCamera(
-                40,
-                container.offsetWidth / container.offsetHeight,
-                0.1,
-                1000
-            );
-            camera.position.set(0, 0, 400);
+            const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
+            renderer.setSize(window.innerWidth, 500);
+            document.getElementById('globe-container').appendChild(renderer.domElement);
 
-            // 4. Controles
-            const controls = new THREE.TrackballControls(camera, renderer.domElement);
-            controls.minDistance = 200;
-            controls.maxDistance = 600;
+            const controls = new OrbitControls(camera, renderer.domElement);
+            controls.enableZoom = false;
+            controls.autoRotate = true;
+            controls.autoRotateSpeed = 0.3;
 
-            // 5. Globo
-            const Globe = new ThreeGlobe()
-                .globeImageUrl('//unpkg.com/three-globe/example/img/earth-blue-marble.jpg')
-                .labelsData([{ lat: 37.09, lng: -95.71, size: 1.5, text: 'United States' }])
-                .labelLat(d => d.lat)
-                .labelLng(d => d.lng)
-                .labelText(d => d.text)
-                .labelSize(d => d.size)
-                .labelDotRadius(d => d.size)
-                .labelColor(() => 'orange');
+            // Luz
+            scene.add(new THREE.AmbientLight(0xbbbbbb));
+            const light = new THREE.DirectionalLight(0xffffff, 0.6);
+            light.position.set(1, 1, 1);
+            scene.add(light);
 
-            // 6. Punto de vista centrado sin “altura” extra
-            Globe.pointOfView({ lat: 0, lng: 0, altitude: 3 }, 0);
+            // Crear el globo
+            const globe = new ThreeGlobe()
+                .globeImageUrl('https://unpkg.com/three-globe/example/img/earth-dark.jpg')
+                .bumpImageUrl('https://unpkg.com/three-globe/example/img/earth-topology.png');
 
-            scene.add(Globe);
+            scene.add(globe);
 
-            // 7. Animación
-            (function animate() {
-                controls.update();
-                Globe.rotation.y += 0.0005;
-                renderer.render(scene, camera);
+            // Posicionar cámara mirando a EE.UU.
+            const lat = 38.8833;
+            const lon = -77.0167;
+            const phi = (90 - lat) * Math.PI / 180;
+            const theta = (lon + 180) * Math.PI / 180;
+            const radius = 150;
+
+            const x = -radius * Math.sin(phi) * Math.cos(theta);
+            const y = radius * Math.cos(phi);
+            const z = radius * Math.sin(phi) * Math.sin(theta);
+
+            camera.position.set(x, y, z);
+            camera.lookAt(globe.position);
+
+            // Animación
+            const animate = () => {
                 requestAnimationFrame(animate);
-            })();
+                controls.update();
+                renderer.render(scene, camera);
+            };
 
-            // 8. Resize
+            animate();
+
+            // Ajuste responsive
             window.addEventListener('resize', () => {
-                camera.aspect = container.offsetWidth / container.offsetHeight;
+                camera.aspect = window.innerWidth / 500;
                 camera.updateProjectionMatrix();
-                renderer.setSize(container.offsetWidth, container.offsetHeight);
+                renderer.setSize(window.innerWidth, 500);
             });
         });
-
     </script>
 
 
