--- a/Programa/dashboard/dashboard.html
+++ b/Programa/dashboard/dashboard.html
@@ -338,13 +338,43 @@
                     <p class="value">Acerca de</p>
                 </div>
             </section>
+
             <!-- Seccion Data base -->
-            <section id="section-2" style="display:none">
-                <div class="card card-dark">
-                    <h4>Sección 🗃️</h4>
-                    <p class="value">Data Base</p>
+            <section id="section-2" style="display:none; padding:20px;">
+                <div class="cards" style="display:flex; gap:20px;">
+
+                    <!-- CSV -->
+                    <div class="card card-dark"
+                        style="flex:1; border-radius:16px; padding:20px; background:#2b2b3d; display:flex; flex-direction:column;">
+                        <h4 style="color:#fff; margin-bottom:12px;">Datos Limpios (CSV)</h4>
+                        <div id="csvTableContainer"
+                            style="overflow:auto; flex:1; border:1px solid #444; border-radius:6px; background:#1e1e2e;">
+                        </div>
+                    </div>
+
+                    <!--  JSON  -->
+                    <div class="card card-dark"
+                        style="flex:1; border-radius:16px; padding:20px; background:#2b2b3d; display:flex; flex-direction:column;">
+                        <h4 style="color:#fff; margin-bottom:12px;">Categorías (JSON)</h4>
+                        <pre id="jsonContainer" style="
+         flex:1;
+         overflow:auto;
+         background:#1e1e2e;
+         border:1px solid #444;
+         border-radius:6px;
+         padding:10px;
+         color:#fff;
+         font-size:12px;
+         white-space:pre-wrap;
+         word-break:break-word;
+       ">
+  </pre>
+                    </div>
+
+
                 </div>
             </section>
+
 
             <!-- Seccion Graficos -->
             <section id="section-3" class="section" style="display:none;">
